--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sw-team",
-  "version": "0.1.0",
+  "name": "sw-teams",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.2",
